<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Harga Koin -->
        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/corporate_s_bold"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="$94,304.74" />

        <TextView
            android:id="@+id/tvPriceChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/corporate_s_bold"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tvPrice"
            app:layout_constraintTop_toTopOf="@id/tvPrice"
            tools:text="-1.3%" />

        <!-- Grafik -->
        <Button
            android:id="@+id/btnCurrency"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_currency_desc"
            app:icon="@drawable/arrow_down"
            app:layout_constraintStart_toStartOf="@+id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCurrency" />

        <!-- Tabs Waktu -->
        <LinearLayout
            android:id="@+id/timeTabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chartView">

            <Button
                android:id="@+id/btn1h"
                style="@style/TimeTabButton"
                android:text="@string/btn_period_1h" />

            <Button
                android:id="@+id/btn24h"
                style="@style/TimeTabButton"
                android:text="@string/btn_period_24h"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btn7d"
                style="@style/TimeTabButton"
                android:text="@string/btn_period_7d"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btn1m"
                style="@style/TimeTabButton"
                android:text="@string/btn_period_30d" />

            <Button
                android:id="@+id/btn1y"
                style="@style/TimeTabButton"
                android:text="@string/btn_period_365d" />
        </LinearLayout>

        <!-- Statistik -->
        <LinearLayout
            android:id="@+id/priceStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_rank_bg"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeTabs">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/StatText"
                    android:text="@string/tv_24h"
                    android:textSize="14sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp" />

                <TextView
                    android:id="@+id/tv24h"
                    style="@style/StatText"
                    android:textSize="14sp"
                    tools:text="-1.3%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/StatText"
                    android:text="@string/tv_7d"
                    android:textSize="14sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp" />

                <TextView
                    android:id="@+id/tv7d"
                    style="@style/StatText"
                    android:textSize="14sp"
                    tools:text="+2.1%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/StatText"
                    android:text="@string/tv_14d"
                    android:textSize="14sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp" />

                <TextView
                    android:id="@+id/tv14d"
                    style="@style/StatText"
                    android:textSize="14sp"
                    tools:text="+4.8%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/StatText"
                    android:text="@string/tv_30d"
                    android:textSize="14sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp" />

                <TextView
                    android:id="@+id/tv30d"
                    style="@style/StatText"
                    android:textSize="14sp"
                    tools:text="+6.7%" />
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tvTopCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceStats">

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corporate_s_bold"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Info" />

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corporate_s_demi_regular"
                app:layout_constraintBottom_toBottomOf="@id/tvInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="more >" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Info Card -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/cardView"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTopCV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/corporate_s_demi_regular"
                        android:text="@string/market_cap"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvMarketCap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/corporate_s_bold"
                        android:textSize="16sp"
                        tools:text="$1,873,328,452,616" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/corporate_s_demi_regular"
                        android:text="@string/volume24h_desc"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvVolume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/corporate_s_bold"
                        android:textSize="16sp"
                        tools:text="$23,421,894,000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/corporate_s_demi_regular"
                        android:text="@string/fully_diluted_valuation_desc"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvDiluted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/corporate_s_bold"
                        android:textSize="16sp"
                        tools:text="$2,070,768,242,387" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/corporate_s_demi_regular"
                        android:text="@string/circulating_supply_desc"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvCirculatingSupply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/corporate_s_bold"
                        android:textSize="16sp"
                        tools:text="19.6 Million" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/corporate_s_demi_regular"
                        android:text="@string/total_supply_desc"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTotalSupply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/corporate_s_bold"
                        android:textSize="16sp"
                        tools:text="19.6 Million" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/corporate_s_demi_regular"
                        android:text="@string/mac_supply_desc"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvMaxSupply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/corporate_s_bold"
                        android:textSize="16sp"
                        tools:text="21.0 Million" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <!-- Shimmer Loading -->
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerFrameDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/shimmer_detail" />
        </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
