<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivCoinLogoShimmer"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_gray_background"
        android:contentDescription="@string/image_coins"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@drawable/ic_bitcoin" />

    <TextView
        android:id="@+id/tvCoinSymbolShimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_gray_background"
        android:minWidth="50dp"
        android:textColor="@color/detailToolbarText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvCoinNameShimmer"
        app:layout_constraintStart_toEndOf="@id/ivCoinLogoShimmer"
        app:layout_constraintTop_toTopOf="@+id/ivCoinLogoShimmer"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvCoinNameShimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_gray_background"
        android:minWidth="30dp"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/ivCoinLogoShimmer"
        app:layout_constraintTop_toBottomOf="@+id/tvCoinSymbolShimmer"
        tools:ignore="TextContrastCheck"
        tools:text="Bitcoin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:background="@drawable/rounded_gray_background"
        android:textColor="@color/detailToolbarText"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/tvCoinSymbolShimmer"
        app:layout_constraintTop_toTopOf="@+id/tvCoinSymbolShimmer"
        tools:text="#1" />

    <!-- Harga Koin -->
    <TextView
        android:id="@+id/tvPriceShimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$94,304.74"
        android:textSize="28sp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_gray_background"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivCoinLogoShimmer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_gray_background"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/tvPriceShimmer"
        app:layout_constraintTop_toTopOf="@id/tvPriceShimmer"
        tools:ignore="TextContrastCheck"
        tools:text="-1.3%" />

    <!-- Grafik -->
    <ImageView
        android:id="@+id/chartViewShimmer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/rounded_gray_background"
        android:contentDescription="@string/chart_desc"
        app:layout_constraintTop_toBottomOf="@id/tvPriceShimmer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0"
        tools:ignore="ImageContrastCheck"/>

    <!-- Tabs Waktu -->
    <LinearLayout
        android:id="@+id/timeTabsShimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/chartViewShimmer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/rounded_gray_background"
            android:contentDescription="@string/btn_period_desc"
            tools:ignore="ImageContrastCheck" />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/btn_period_desc"
            android:background="@drawable/rounded_gray_background"
            tools:ignore="ImageContrastCheck"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/btn_period_desc"
            android:background="@drawable/rounded_gray_background"
            tools:ignore="ImageContrastCheck"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/btn_period_desc"
            android:background="@drawable/rounded_gray_background"
            tools:ignore="ImageContrastCheck"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/rounded_gray_background"
            android:contentDescription="@string/btn_period_desc"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <!-- Statistik -->
    <LinearLayout
        android:id="@+id/priceStatsShimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/timeTabsShimmer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/StatText"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounded_gray_background"
            tools:text="24H\n-1.3%" />

        <TextView
            style="@style/StatText"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounded_gray_background"
            tools:text="7D\n+2.1%" />

        <TextView
            style="@style/StatText"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounded_gray_background"
            tools:text="14D\n+4.8%" />

        <TextView
            style="@style/StatText"
            android:background="@drawable/rounded_gray_background"
            tools:text="30D\n+6.7%" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/priceStatsShimmer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutShimmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corporate_s_demi_regular"
                tools:text="@string/market_cap"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="80dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/corporate_s_bold"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="150dp"
                android:textSize="16sp"
                tools:text="$1,873,328,452,616" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corporate_s_demi_regular"
                android:layout_marginTop="12dp"
                tools:text="Volume (24H) ⓘ"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="80dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="150dp"
                android:fontFamily="@font/corporate_s_bold"
                android:textSize="16sp"
                tools:text="$23,421,894,000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corporate_s_demi_regular"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="80dp"
                tools:text="Fully Diluted Valuation ⓘ"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="150dp"
                android:fontFamily="@font/corporate_s_bold"
                android:textSize="16sp"
                tools:text="$2,070,768,242,387" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayoutShimmer"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corporate_s_demi_regular"
                tools:text="Circulating Supply ⓘ"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="80dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/corporate_s_bold"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="150dp"
                android:textSize="16sp"
                tools:text="19.6 Million" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corporate_s_demi_regular"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="80dp"
                tools:text="Total Supply ⓘ"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/corporate_s_bold"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="150dp"
                android:textSize="16sp"
                tools:text="19.6 Million" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="80dp"
                android:fontFamily="@font/corporate_s_demi_regular"
                android:layout_marginTop="12dp"
                tools:text="Max Supply ⓘ"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corporate_s_bold"
                android:background="@drawable/rounded_gray_background"
                android:minWidth="150dp"
                android:textSize="16sp"
                tools:text="21.0 Million" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
